<resources>
    <string name="app_name">Calculator</string>
    <string name="app_logo">Удивительный калькулятор</string>
    <string name="text1">Первое число</string>
    <string name="text2">Второе число</string>
    <string name="mod">Остаток от деления</string>
    <string name="plus">➕</string>
    <string name="minus">➖</string>
    <string name="multiplcation">✖️</string>
    <string name="divide">➗</string>
    <string name="_1">1</string>
    <string name="activity_switch1">Перейти на 2 активность</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="clear">C</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="backspace">◀</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
</resources>