<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:textSize="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#393737"
        android:gravity="center_horizontal"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#393737"
            android:gravity="end">

            <Button
                android:id="@+id/clear"
                style="@style/calcbutton_style"
                android:text="@string/clear" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:gravity="center"
            android:padding="0dp">

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textColor="@color/text"
                android:textSize="28sp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="28sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/multiplication"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplcation"
                android:textSize="28sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divide"
                android:textSize="28sp"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:gravity="center"
            android:padding="0dp">

            <Button
                android:id="@+id/one"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_1"
                android:textColor="#8741CD" />

            <Button
                android:id="@+id/two"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_2"
                android:textColor="#8741CD" />

            <Button
                android:id="@+id/free"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_3"
                android:textColor="#8741CD" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:gravity="center"
            android:padding="0dp">

            <Button
                android:id="@+id/four"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_4"
                android:textColor="#8741CD" />

            <Button
                android:id="@+id/five"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_5"
                android:textColor="#8741CD" />

            <Button
                android:id="@+id/six"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_6"
                android:textColor="#8741CD" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:gravity="center"
            android:padding="0dp">

            <Button
                android:id="@+id/seven"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_7"
                android:textColor="#8741CD" />

            <Button
                android:id="@+id/eight"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_8"
                android:textColor="#8741CD" />

            <Button
                android:id="@+id/nine"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_9"
                android:textColor="#8741CD" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:padding="0dp">

            <Button
                android:id="@+id/equal"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/equal"
                android:textColor="#8741CD" />

            <Button
                android:id="@+id/zero"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/_0"
                android:textColor="#8741CD" />

            <Button
                android:id="@+id/backspace"
                style="@style/calcbutton_style"
                android:backgroundTint="#B744ECDE"
                android:text="@string/backspace"
                android:textColor="#8741CD" />


        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="end"
        android:padding="50dp"
        android:text=""
        android:textColor="#e2e2e2"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/activity_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/activity_switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>